--- a/pages/guide.html
+++ b/pages/guide.html
@@ -440,15 +440,9 @@
                                     <h3>Copy thư mục plugin</h3>
                                     <p>Copy thư mục <code>docbao.koplugin</code> vào đường dẫn:</p>
                                     <div class="path-box">
-                                        <code>.../koreader/plugins/</code>
-                                        <button class="copy-btn" onclick="copyToClipboard('.../koreader/plugins/')">
-                                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                                                <rect x="9" y="9" width="13" height="13" rx="2" ry="2"></rect>
-                                                <path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"></path>
-                                            </svg>
-                                            Copy
-                                        </button>
+                                        <code><strong>.../koreader/plugins/</strong></code>
                                     </div>
+                                    
                                     <div class="feature-screenshots">
                                         <img src="https://haiminh2023.github.io/assets/images/guide/copy_plugin_android.jpg?v=1.7" alt="Copy plugin">
                                     </div>
