--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <main class="page">
     <section class="page-inner">
 
-        <h1>Đọc Online là plugin KOReader hỗ trợ đọc tối ưu cho thiết bị máy đọc sách e-ink (Kobo/Kindle/pocket book/ Android).</h1>
+        <h1>Đọc Online là app hỗ trợ đọc tối ưu cho thiết bị máy đọc sách e-ink (Kobo/Kindle/pocket book/ Android).</h1>
 
         <!-- ===== GRID 4 THẺ ===== -->
         <div class="feature-grid">
