--- a/index.html
+++ b/index.html
@@ -33,7 +33,16 @@
 <main class="page">
     <section class="page-inner">
 
-        <h1>Đọc Online là app hỗ trợ đọc tối ưu cho thiết bị máy đọc sách e-ink (Kobo/Kindle/pocket book/ Android...).</h1>
+        <!-- Banner image thay thế cho tiêu đề h1 cũ -->
+        <div class="banner-container">
+            <img 
+                src="assets/images/banner/banner-1.png" 
+                alt="Đọc Online - Ứng dụng đọc tối ưu cho thiết bị E-ink"
+                loading="lazy"
+                width="100%" 
+                style="max-width: 100%; height: auto; display: block;"
+            >
+        </div>
 
         <!-- ===== GRID 4 THẺ ===== -->
         <div class="feature-grid">
