--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <!-- Banner image thay thế cho tiêu đề h1 cũ -->
         <div class="banner-container">
             <img 
-                src="assets/images/banner/banner-1.png" 
+                src="https://haiminh2023.github.io/assets/images/banner/banner-1.png?v=1.0" 
                 alt="Đọc Online - Ứng dụng đọc tối ưu cho thiết bị E-ink"
                 loading="lazy"
                 width="100%" 
