--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                         <li>Nhiều nguồn truyện</li>
                         <li>Lưu chương đang đọc</li>
                         <li>Cập nhật truyện mới</li>
-                        <li>Tải & đọc offline</li>
+                        <li>Tìm, tải & đọc offline</li>
                     </ul>
                 </div>
                 <div class="feature-image">
@@ -95,7 +95,7 @@
                         <li>Kho truyện cộng đồng</li>
                         <li>hơn 10K+ truyện tranh - chữ</li>
                         <li>Phân loại rõ ràng</li>
-                        <li>Tải & đọc offline</li>
+                        <li>Tìm, tải & đọc offline</li>
                     </ul>
                 </div>
                 <div class="feature-image">
@@ -116,7 +116,7 @@
                         <li>Kết nối Drive cá nhân</li>
                         <li>Xem file được chia sẻ</li>
                         <li>Xem file drive của tôi</li>
-                        <li>Tải & đọc offline</li>
+                        <li>Tìm, tải & đọc offline</li>
                     </ul>
                 </div>
                 <div class="feature-image">
