--- a/pages/pricing.html
+++ b/pages/pricing.html
@@ -18,10 +18,10 @@
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
 
 <!-- Styles chung -->
-<link rel="stylesheet" href="css/style.css?v=20260509">
+<link rel="stylesheet" href="../css/style.css?v=20260509">
 
 <!-- Styles riêng cho trang giá -->
-<link rel="stylesheet" href="css/pricing.css?v=20260623">
+<link rel="stylesheet" href="../css/pricing.css?v=20260623">
 
 <!-- Canonical URL -->
 <link rel="canonical" href="https://doc-online.io.vn/pricing.html">
