--- a/pages/pricing.html
+++ b/pages/pricing.html
@@ -5,7 +5,7 @@
 <title>Bảng giá dịch vụ - Đọc Online</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<script src="js/security.js?v=20260415"></script>
+<script src="../js/security.js?v=20260415"></script>
 <script src="../js/cloudflare-loader.js?v=20260416"></script>
 <script src="../js/include.js?v=20260616"></script>
     
