--- a/pages/pricing.html
+++ b/pages/pricing.html
@@ -55,7 +55,7 @@
             </thead>
             <tbody>
                 <tr>
-                    <td class="package-name">D1</td>
+                    <td class="package-name">D1 - Gói đọc báo</td>
                     <td><span class="check">✔️</span></td>
                     <td><span class="check">✔️</span></td>
                     <td class="unavailable"></td>
@@ -63,7 +63,7 @@
                     <td class="price">100.000đ</td>
                 </tr>
                 <tr>
-                    <td class="package-name">D2</td>
+                    <td class="package-name">D2 - Gói đọc truyện</td>
                     <td class="unavailable"></td>
                     <td><span class="check">✔️</span></td>
                     <td><span class="check">✔️</span></td>
@@ -71,7 +71,7 @@
                     <td class="price">100.000đ</td>
                 </tr>
                 <tr>
-                    <td class="package-name">D3</td>
+                    <td class="package-name">D3 - Gói truy cập Google drive</td>
                     <td class="unavailable"></td>
                     <td class="unavailable"></td>
                     <td><span class="check">✔️</span></td>
@@ -79,20 +79,27 @@
                     <td class="price">100.000đ</td>
                 </tr>
                 <tr>
-                    <td class="package-name">D4</td>
+                    <td class="package-name">D4 - gói full tính năng</td>
                     <td><span class="check">✔️</span></td>
                     <td><span class="check">✔️</span></td>
                     <td><span class="check">✔️</span></td>
                     <td><span class="check">✔️</span></td>
                     <td class="price">200.000đ</td>
                 </tr>
+                <tr>
+                    <td class="package-name">Dùng thử 7 ngày</td>
+                    <td><span class="check">✔️</span></td>
+                    <td><span class="check">✔️</span></td>
+                    <td><span class="check">✔️</span></td>
+                    <td class="unavailable"></td>
+                    <td class="price">0đ</td>
+                </tr>
             </tbody>
         </table>
 
         <!-- Ghi chú -->
         <div class="pricing-note">
-            <p>✔️: Có hỗ trợ | Trống: Không hỗ trợ</p>
-            <p>* Giá đã bao gồm VAT. Miễn phí vận chuyển với đơn hàng trên 500.000đ</p>
+            <p>Vui lòng liên hệ zalo bên dưới trang web để được tư vấn chi tiết </p>
         </div>
 
     </div>
