--- a/pages/pricing.html
+++ b/pages/pricing.html
@@ -37,7 +37,7 @@
         
         <!-- Tiêu đề trang -->
         <div class="pricing-header">
-            <h1>Bảng giá dịch vụ</h1>
+            <h1>Bảng giá key</h1>
             <p>Lựa chọn gói phù hợp với nhu cầu đọc của bạn</p>
         </div>
 
