--- a/pages/pricing.html
+++ b/pages/pricing.html
@@ -55,7 +55,7 @@
             </thead>
             <tbody>
                 <tr>
-                    <td class="package-name">D1 - Gói đọc báo</td>
+                    <td class="package-name">D1 - Đọc báo</td>
                     <td><span class="check">✔️</span></td>
                     <td><span class="check">✔️</span></td>
                     <td class="unavailable"></td>
@@ -63,7 +63,7 @@
                     <td class="price">100.000đ</td>
                 </tr>
                 <tr>
-                    <td class="package-name">D2 - Gói đọc truyện</td>
+                    <td class="package-name">D2 - Đọc truyện</td>
                     <td class="unavailable"></td>
                     <td><span class="check">✔️</span></td>
                     <td><span class="check">✔️</span></td>
@@ -71,7 +71,7 @@
                     <td class="price">100.000đ</td>
                 </tr>
                 <tr>
-                    <td class="package-name">D3 - Gói truy cập Google drive</td>
+                    <td class="package-name">D3 - Truy cập Google drive</td>
                     <td class="unavailable"></td>
                     <td class="unavailable"></td>
                     <td><span class="check">✔️</span></td>
@@ -79,7 +79,7 @@
                     <td class="price">100.000đ</td>
                 </tr>
                 <tr>
-                    <td class="package-name">D4 - gói full tính năng</td>
+                    <td class="package-name">D4 - Full tính năng</td>
                     <td><span class="check">✔️</span></td>
                     <td><span class="check">✔️</span></td>
                     <td><span class="check">✔️</span></td>
