--- a/pages/pricing.html
+++ b/pages/pricing.html
@@ -2,7 +2,7 @@
 <html lang="vi">
 <head>
 <meta charset="UTF-8">
-<title>Bảng giá dịch vụ - Đọc Online</title>
+<title>Bảng giá key - Đọc Online</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <script src="../js/security.js?v=20260415"></script>
