--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <!-- Banner image thay thế cho tiêu đề h1 cũ -->
         <div class="banner-container">
             <img 
-                src="https://haiminh2023.github.io/assets/images/banner/banner-1.png?v=1.2" 
+                src="https://cdn.jsdelivr.net/gh/haiminh2023/haiminh2023.github.io/assets/images/banner/banner-1.png?v=1.3"
                 alt="Đọc Online - Ứng dụng đọc tối ưu cho thiết bị E-ink"
                 loading="lazy"
                 width="100%" 
