--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 </div>
                 <div class="feature-image">
                     <img 
-                        src="https://haiminh2023.github.io/assets/images/rss_home.jpg?v=1.3" 
+                        src="https://cdn.jsdelivr.net/gh/haiminh2023/haiminh2023.github.io/assets/images/rss_home.jpg?v=1.3" 
                         alt="Đọc báo RSS"
                         loading="lazy"
                         width="400"
@@ -79,7 +79,7 @@
                 </div>
                 <div class="feature-image">
                     <img 
-                        src="https://haiminh2023.github.io/assets/images/story.jpg?v=1.2" 
+                        src="https://cdn.jsdelivr.net/gh/haiminh2023/haiminh2023.github.io/assets/images/story.jpg?v=1.2" 
                         alt="Đọc truyện online"
                         loading="lazy"
                         width="400"
@@ -100,7 +100,7 @@
                 </div>
                 <div class="feature-image">
                     <img 
-                        src="https://haiminh2023.github.io/assets/images/story_share_4.jpg" 
+                        src="https://cdn.jsdelivr.net/gh/haiminh2023/haiminh2023.github.io/assets/images/story_share_4.jpg" 
                         alt="Kho truyện chia sẻ"
                         loading="lazy"
                         width="400"
@@ -121,7 +121,7 @@
                 </div>
                 <div class="feature-image">
                     <img 
-                        src="https://haiminh2023.github.io/assets/images/google_drive.jpg" 
+                        src="https://cdn.jsdelivr.net/gh/haiminh2023/haiminh2023.github.io/assets/images/google_drive.jpg" 
                         alt="Google Drive"
                         loading="lazy"
                         width="400"
