--- a/pages/guide.html
+++ b/pages/guide.html
@@ -268,7 +268,7 @@
                                         <code>KOBOeReader(E:)\.adds\koreader\plugins</code>
                                     </div>
                                     <div class="feature-screenshots">
-                                        <img src="https://haiminh2023.github.io/assets/images/guide/copy_plugin.jpg?v=1.5" alt="Copy plugin">
+                                        <img src="https://cdn.jsdelivr.net/gh/haiminh2023/haiminh2023.github.io/assets/images/guide/copy_plugin.jpg?v=1.5" alt="Copy plugin">
                                     </div>
                                 </div>
                             </div>
@@ -278,7 +278,7 @@
                                     <h3>Kiểm tra cài đặt</h3>
                                     <p>Trong KOReader, vào <strong>Menu → Công cụ </strong> để xác nhận plugin<strong> " ❄ Đọc Online"</strong>  đã được cài đặt (nếu không thấy vuốt sang trái để sang trang 2 là thấy).</p>
                                     <div class="feature-screenshots">
-                                        <img src="https://haiminh2023.github.io/assets/images/guide/Add_app.jpg?v=1.5" alt="Copy plugin">
+                                        <img src="https://cdn.jsdelivr.net/gh/haiminh2023/haiminh2023.github.io/assets/images/guide/Add_app.jpg?v=1.5" alt="Copy plugin">
                                     </div>
                                 </div>
 
@@ -320,7 +320,7 @@
                                         <code>Kindle(E:)\Koreader\plugins</code>
                                     </div>
                                     <div class="feature-screenshots">
-                                        <img src="https://haiminh2023.github.io/assets/images/guide/copy_plugin_kindle.jpg?v=1.6" alt="Copy plugin">
+                                        <img src="https://cdn.jsdelivr.net/gh/haiminh2023/haiminh2023.github.io/assets/images/guide/copy_plugin_kindle.jpg?v=1.6" alt="Copy plugin">
                                     </div>
                                 </div>
                             </div>
@@ -330,7 +330,7 @@
                                     <h3>Kiểm tra cài đặt</h3>
                                     <p>Trong KOReader, vào <strong>Menu → Công cụ </strong> để xác nhận plugin<strong> " ❄ Đọc Online"</strong>  đã được cài đặt (nếu không thấy vuốt sang trái để sang trang 2 là thấy).</p>
                                     <div class="feature-screenshots">
-                                        <img src="https://haiminh2023.github.io/assets/images/guide/Add_app.jpg?v=1.5" alt="Copy plugin">
+                                        <img src="https://cdn.jsdelivr.net/gh/haiminh2023/haiminh2023.github.io/assets/images/guide/Add_app.jpg?v=1.5" alt="Copy plugin">
                                     </div>
                                 </div>
 
@@ -372,7 +372,7 @@
                                         <code>PocketBook(E:)\Koreader\plugins</code>
                                     </div>
                                     <div class="feature-screenshots">
-                                        <img src="https://haiminh2023.github.io/assets/images/guide/copy_plugin_pocketBook.jpg?v=1.5" alt="Copy plugin">
+                                        <img src="https://cdn.jsdelivr.net/gh/haiminh2023/haiminh2023.github.io/assets/images/guide/copy_plugin_pocketBook.jpg?v=1.5" alt="Copy plugin">
                                     </div>
                                 </div>
                             </div>
@@ -382,7 +382,7 @@
                                     <h3>Kiểm tra cài đặt</h3>
                                     <p>Trong KOReader, vào <strong>Menu → Công cụ </strong> để xác nhận plugin<strong> " ❄ Đọc Online"</strong>  đã được cài đặt (nếu không thấy vuốt sang trái để sang trang 2 là thấy).</p>
                                     <div class="feature-screenshots">
-                                        <img src="https://haiminh2023.github.io/assets/images/guide/Add_app.jpg?v=1.5" alt="Copy plugin">
+                                        <img src="https://cdn.jsdelivr.net/gh/haiminh2023/haiminh2023.github.io/assets/images/guide/Add_app.jpg?v=1.5" alt="Copy plugin">
                                     </div>
                                 </div>
 
@@ -401,27 +401,27 @@
                                         <div class="slider-container">
                                             <div class="slider-track">
                                                 <div class="slider-slide">
-                                                    <img src="https://haiminh2023.github.io/assets/images/guide/android-step1-1.jpg?v=1.2" alt="androi">
+                                                    <img src="https://cdn.jsdelivr.net/gh/haiminh2023/haiminh2023.github.io/assets/images/guide/android-step1-1.jpg?v=1.2" alt="androi">
                                                     <div class="slide-caption">Bước 1: Nhấn file APK</div>
                                                 </div>
                                                 <div class="slider-slide">
-                                                    <img src="https://haiminh2023.github.io/assets/images/guide/android-step1-2.jpg?v=1.1" alt="androi">
+                                                    <img src="https://cdn.jsdelivr.net/gh/haiminh2023/haiminh2023.github.io/assets/images/guide/android-step1-2.jpg?v=1.1" alt="androi">
                                                     <div class="slide-caption">Bước 2: Nhấn chi tiết khác</div>
                                                 </div>
                                                 <div class="slider-slide">
-                                                    <img src="https://haiminh2023.github.io/assets/images/guide/android-step1-3.jpg?v=1.2" alt="androi">
+                                                    <img src="https://cdn.jsdelivr.net/gh/haiminh2023/haiminh2023.github.io/assets/images/guide/android-step1-3.jpg?v=1.2" alt="androi">
                                                     <div class="slide-caption">Bước 3: Nhấn tiếp tục cài đặt</div>
                                                 </div>
                                                 <div class="slider-slide">
-                                                    <img src="https://haiminh2023.github.io/assets/images/guide/android-step1-4.jpg?v=1.1" alt="androi">
+                                                    <img src="https://cdn.jsdelivr.net/gh/haiminh2023/haiminh2023.github.io/assets/images/guide/android-step1-4.jpg?v=1.1" alt="androi">
                                                     <div class="slide-caption">Bước 4: Nhấn mở</div>
                                                 </div>
                                                 <div class="slider-slide">
-                                                    <img src="https://haiminh2023.github.io/assets/images/guide/android-step1-5.jpg?v=1.1" alt="androi">
+                                                    <img src="https://cdn.jsdelivr.net/gh/haiminh2023/haiminh2023.github.io/assets/images/guide/android-step1-5.jpg?v=1.1" alt="androi">
                                                     <div class="slide-caption">Bước 5: Nhấn OK</div>
                                                 </div>
                                                     <div class="slider-slide">
-                                                    <img src="https://haiminh2023.github.io/assets/images/guide/android-step1-5-1.jpg?v=1.2" alt="androi">
+                                                    <img src="https://cdn.jsdelivr.net/gh/haiminh2023/haiminh2023.github.io/assets/images/guide/android-step1-5-1.jpg?v=1.2" alt="androi">
                                                     <div class="slide-caption">Bước 6: Cấp quyền và sử dụng</div>
                                                 </div>
                                             </div>
@@ -444,7 +444,7 @@
                                     </div>
                                     
                                     <div class="feature-screenshots">
-                                        <img src="https://haiminh2023.github.io/assets/images/guide/copy_plugin_android.jpg?v=1.7" alt="Copy plugin">
+                                        <img src="https://cdn.jsdelivr.net/gh/haiminh2023/haiminh2023.github.io/assets/images/guide/copy_plugin_android.jpg?v=1.7" alt="Copy plugin">
                                     </div>
                                 </div>
                             </div>
@@ -463,7 +463,7 @@
                                     <h3>Kiểm tra cài đặt</h3>
                                     <p>Trong KOReader, vào <strong>Menu → Công cụ </strong> để xác nhận plugin<strong> " ❄ Đọc Online"</strong>  đã được cài đặt (nếu không thấy vuốt sang trái để sang trang 2 là thấy).</p>
                                     <div class="feature-screenshots">
-                                        <img src="https://haiminh2023.github.io/assets/images/guide/Add_app.jpg?v=1.5" alt="Copy plugin">
+                                        <img src="https://cdn.jsdelivr.net/gh/haiminh2023/haiminh2023.github.io/assets/images/guide/Add_app.jpg?v=1.5" alt="Copy plugin">
                                     </div>
                                 </div>
 
