--- a/pages/pricing.html
+++ b/pages/pricing.html
@@ -12,7 +12,7 @@
 <!-- Preconnect for external domains -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link rel="preconnect" href="https://haiminh2023.github.io">
+<link rel="preconnect" href="https://cdn.jsdelivr.net">
     
 <!-- Fonts -->
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
