--- a/pages/pricing.html
+++ b/pages/pricing.html
@@ -55,7 +55,7 @@
             </thead>
             <tbody>
                 <tr>
-                    <td class="package-name">D1 - Đọc báo</td>
+                    <td class="package-name">D1 - Trình đọc tin tức (Reader Mode)</td>
                     <td><span class="check">✔️</span></td>
                     <td class="unavailable"></td>
                     <td><span class="check">✔️</span></td>
