--- a/pages/pricing.html
+++ b/pages/pricing.html
@@ -46,7 +46,7 @@
             <thead>
                 <tr>
                     <th>Gói dịch vụ</th>
-                    <th>Đọc báo</th>
+                    <th>Trình đọc tin tức (Reader Mode)</th>
                     <th>Đọc truyện</th>
                     <th>Kho sách</th>
                     <th>Google Drive</th>
