--- a/index.html
+++ b/index.html
@@ -48,18 +48,18 @@
 
             <div class="feature-card" onclick="window.location.href='pages/features.html#rss-feature'">
                 <div class="feature-content">
-                    <h3>📰 Đọc báo RSS</h3>
-                    <ul>
-                        <li>Tổng hợp nhiều đầu báo</li>
-                        <li>Tìm kiếm nội dung nhanh</li>
-                        <li>Truy cập danh mục yêu thích</li>
-                        <li>Tối ưu hóa nội dung bài viết</li>
-                    </ul>
+                <h3>📰 RSS & Reader Mode</h3>
+                <ul>
+                    <li>Theo dõi nội dung từ nhiều nguồn RSS công khai</li>
+                    <li>Tìm kiếm nội dung nhanh</li>
+                    <li>Quản lý và truy cập nguồn yêu thích</li>
+                    <li>Hiển thị qua chế độ Reader tối ưu cho e-ink</li>
+                </ul>
                 </div>
                 <div class="feature-image">
                     <img 
                         src="https://cdn.jsdelivr.net/gh/haiminh2023/haiminh2023.github.io/assets/images/rss_home.jpg?v=1.3" 
-                        alt="Đọc báo RSS"
+                        alt="Reader Mode"
                         loading="lazy"
                         width="400"
                         height="300"
