--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
                 <div class="feature-content">
                 <h3>📰 RSS & Reader Mode</h3>
                 <ul>
-                    <li>Theo dõi nội dung từ nhiều nguồn RSS công khai</li>
-                    <li>Tìm kiếm nội dung nhanh</li>
-                    <li>Quản lý và truy cập nguồn yêu thích</li>
-                    <li>Hiển thị qua chế độ Reader tối ưu cho e-ink</li>
+                    <li>Theo dõi tin tức từ nhiều nguồn RSS</li>
+                    <li>Tìm kiếm và quản lý nguồn yêu thích</li>
+                    <li>Đọc nội dung nhanh, gọn, dễ nhìn</li>
+                    <li>Chế độ Reader tối ưu cho màn hình e-ink</li>
                 </ul>
                 </div>
                 <div class="feature-image">
@@ -71,9 +71,9 @@
                 <div class="feature-content">
                     <h3>📖 Đọc truyện online</h3>
                     <ul>
-                        <li>Nhiều nguồn truyện</li>
+                        <li>Hỗ trợ truy cập nhiều website truyện</li>
                         <li>Lưu chương đang đọc</li>
-                        <li>Cập nhật truyện mới</li>
+                        <li>Theo dõi cập nhật mới</li>
                         <li>Tìm, tải & đọc offline</li>
                     </ul>
                 </div>
