--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
                 <div class="feature-content">
                     <h3>📚 Kho truyện chia sẻ</h3>
                     <ul>
-                        <li>Kho truyện cộng đồng</li>
-                        <li>hơn 10K+ truyện tranh - chữ</li>
-                        <li>Phân loại rõ ràng</li>
+                        <li>Danh sách chia sẻ từ cộng đồng</li>
+                        <li>Dễ dàng tìm kiếm và phân loại</li>
+                        <li>Kết nối nhanh đến nguồn lưu trữ</li>
                         <li>Tìm, tải & đọc offline</li>
                     </ul>
                 </div>
