--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                         <li>Hỗ trợ truy cập nhiều website truyện</li>
                         <li>Lưu chương đang đọc</li>
                         <li>Theo dõi cập nhật mới</li>
-                        <li>Tìm, tải & đọc offline</li>
+                        <li>Hỗ trợ tìm kiếm, đọc offline</li>
                     </ul>
                 </div>
                 <div class="feature-image">
@@ -95,7 +95,7 @@
                         <li>Danh sách chia sẻ từ cộng đồng</li>
                         <li>Dễ dàng tìm kiếm và phân loại</li>
                         <li>Kết nối nhanh đến nguồn lưu trữ</li>
-                        <li>Tìm, tải & đọc offline</li>
+                        <li>Hỗ trợ tìm kiếm, đọc offline</li>
                     </ul>
                 </div>
                 <div class="feature-image">
@@ -114,9 +114,9 @@
                     <h3>☁️ Google Drive</h3>
                     <ul>
                         <li>Kết nối Drive cá nhân</li>
-                        <li>Xem file được chia sẻ</li>
-                        <li>Xem file drive của tôi</li>
-                        <li>Tìm, tải & đọc offline</li>
+                        <li>Truy cập file bạn sở hữu hoặc được chia sẻ</li>
+                        <li>Hỗ trợ tìm kiếm file</li>
+                        <li>Hỗ trợ đọc offline</li>
                     </ul>
                 </div>
                 <div class="feature-image">
