--- a/pages/pricing.html
+++ b/pages/pricing.html
@@ -37,8 +37,8 @@
         
         <!-- Tiêu đề trang -->
         <div class="pricing-header">
-            <h1>Bảng giá key</h1>
-            <p>Lựa chọn gói phù hợp với nhu cầu đọc của bạn</p>
+            <h1>Bảng giá dịch vụ</h1>
+            <p>Phí sử dụng công cụ và tính năng hỗ trợ đọc. Nội dung được truy cập từ nguồn do người dùng lựa chọn.</p>
         </div>
 
         <!-- Bảng giá -->
@@ -48,7 +48,7 @@
                     <th>Gói dịch vụ</th>
                     <th>Trình đọc tin tức (Reader Mode)</th>
                     <th>Đọc truyện</th>
-                    <th>Kho sách</th>
+                    <th>Kho sách share</th>
                     <th>Google Drive</th>
                     <th>Giá 1 năm</th>
                 </tr>
@@ -71,7 +71,7 @@
                     <td class="price">100.000đ</td>
                 </tr>
                 <tr>
-                    <td class="package-name">D3 - Truy cập Google drive</td>
+                    <td class="package-name">D3 - Tích hợp Google Drive</td>
                     <td class="unavailable"></td>
                     <td class="unavailable"></td>
                     <td><span class="check">✔️</span></td>
@@ -100,6 +100,11 @@
         <!-- Ghi chú -->
         <div class="pricing-note">
             <p>Vui lòng liên hệ zalo bên dưới trang web để được tư vấn chi tiết </p>
+            <p class="legal-note">
+                Dịch vụ cung cấp công cụ hỗ trợ đọc và quản lý nội dung.
+                Chúng tôi không lưu trữ hoặc phân phối nội dung từ bên thứ ba.
+                Người dùng chịu trách nhiệm về nội dung họ truy cập.
+                </p>
         </div>
 
     </div>
