--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
                     <ul>
                         <li>Kết nối Drive cá nhân</li>
                         <li>Truy cập file bạn sở hữu hoặc được chia sẻ</li>
-                        <li>Hỗ trợ tìm kiếm file</li>
-                        <li>Hỗ trợ đọc offline</li>
+                        <li>Duyệt file trong thư mục gốc</li>
+                        <li>Hỗ trợ tìm kiếm, đọc offline</li>
                     </ul>
                 </div>
                 <div class="feature-image">
