--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
             <div class="feature-card" onclick="window.location.href='pages/features.html#rss-feature'">
                 <div class="feature-content">
-                <h3>📰 RSS & Reader Mode</h3>
+                <h3>📰 Đọc tin RSS</h3>
                 <ul>
                     <li>Theo dõi tin tức từ nhiều nguồn RSS</li>
                     <li>Tìm kiếm và quản lý nguồn yêu thích</li>
@@ -59,7 +59,7 @@
                 <div class="feature-image">
                     <img 
                         src="https://cdn.jsdelivr.net/gh/haiminh2023/haiminh2023.github.io/assets/images/rss_home.jpg?v=1.3" 
-                        alt="Reader Mode"
+                        alt="Đọc tin RSS"
                         loading="lazy"
                         width="400"
                         height="300"
