--- a/pages/pricing.html
+++ b/pages/pricing.html
@@ -46,7 +46,7 @@
             <thead>
                 <tr>
                     <th>Gói dịch vụ</th>
-                    <th>Trình đọc tin tức (Reader Mode)</th>
+                    <th>Đọc tin RSS (Reader Mode)</th>
                     <th>Đọc truyện</th>
                     <th>Kho sách share</th>
                     <th>Google Drive</th>
@@ -55,7 +55,7 @@
             </thead>
             <tbody>
                 <tr>
-                    <td class="package-name">D1 - Trình đọc tin tức (Reader Mode)</td>
+                    <td class="package-name">D1 - Đọc tin RSS (Reader Mode)</td>
                     <td><span class="check">✔️</span></td>
                     <td class="unavailable"></td>
                     <td><span class="check">✔️</span></td>
