--- a/pages/pricing.html
+++ b/pages/pricing.html
@@ -101,10 +101,9 @@
         <div class="pricing-note">
             <p>Vui lòng liên hệ zalo bên dưới trang web để được tư vấn chi tiết </p>
             <p class="legal-note">
-                Dịch vụ cung cấp công cụ hỗ trợ đọc và quản lý nội dung.
+                Dịch vụ cung cấp công cụ hỗ trợ đọc và quản lý nội dung cá nhân.
                 Chúng tôi không lưu trữ hoặc phân phối nội dung từ bên thứ ba.
-                Người dùng chịu trách nhiệm về nội dung họ truy cập.
-                </p>
+            </p>
         </div>
 
     </div>
